# PDF-to-MP3-TelegramBot

./: .env_example  Dockerfile  README.md  main.py  pyproject.toml
config/: bot.py  keybords.py
services/: gtts.py
